solution/deploy/songs-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs-app
  labels:
    app: songs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: songs
  template:
    metadata:
      labels:
        app: songs
    spec:
      containers:
      - name: songs
        image: alexakslabacr.azurecr.io/songs:1.0.0
        ports:
        - containerPort: 80
