solution/deploy/contracts-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contracts-app
  labels:
    app: contracts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contracts
  template:
    metadata:
      labels:
        app: contracts
    spec:
      containers:
      - name: contracts
        image: alexakslabacr.azurecr.io/contracts:1.0.0
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: contracts
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: contracts
