solution/deploy/songs-versions-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs-v1-app
  labels:
    app: songs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: songs
  template:
    metadata:
      labels:
        app: songs
        version: v1
    spec:
      containers:
      - name: songs
        image: alexakslabacr.azurecr.io/songs:1.1.0
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs-v2-app
  labels:
    app: songs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: songs
  template:
    metadata:
      labels:
        app: songs
        version: v2
    spec:
      containers:
      - name: songs
        image: alexakslabacr.azurecr.io/songs:2.0.1
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: songs
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: songs
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: songs-route
spec:
  hosts:
  - songs
  http:
  - match:
    - headers:
        x-api-version:
          exact: v1
    route:
    - destination:
        host: songs
        subset: v1
  - match:
    - headers:
        x-api-version:
          exact: v2
    route:
    - destination:
        host: songs
        subset: v2
  - match:
    - headers:
        x-api-version:
          regex: ".*"
    fault:
      abort:
        percentage:
          value: 100
        httpStatus: 400
    route:
      - destination:
          host: service-that-can-return-proper-error-message
  - route:
    - destination:
        host: songs
        subset: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: songs-destination
spec:
  host: songs
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
